hide keybord and login button fix

--- a/DigitalPanAndPaper_AdventureManager/app/src/main/AndroidManifest.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/AndroidManifest.xml
@@ -17,8 +17,10 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".CharChooserActivity" />
-        <activity android:name=".AddCharacterActivity" />
-        <activity android:name=".AddCharacterStatsActivity" />
+        <activity android:name=".AddCharacterActivity"
+            android:windowSoftInputMode="stateHidden"/>
+        <activity android:name=".AddCharacterStatsActivity"
+            android:windowSoftInputMode="stateHidden"/>
         <activity android:name=".CharacterViewActivity"></activity>
 
     </application>
